[Fix] 인스펙터 에디터 복제된거 삭제, 전투 로직 삭제된 것 복구
전투 로직 건들 시 물어보고 건들여주세요.

--- a/End Distopirism/.vscode/settings.json
+++ b/End Distopirism/.vscode/settings.json
@@ -1,3 +1,38 @@
 {
-    "dotnet.preferCSharpExtension": true
+    "dotnet.preferCSharpExtension": true,
+    "files.exclude": {
+        "**/*.log": true,
+        "**/*.csproj": true,
+        "**/*.sln": true,
+        "**/*.mat": true,
+        "**/*.unitypackage": true,
+        "**/*.meta": true,
+        "**/*.pdf": true,
+        "**/*.txt": true,
+        "**/*.asmdef": true,
+        "**/*.asset": true,
+        "**/*.png": true,
+        "**/*.tmp": true,
+        "node_modules": true,
+        "dist": true,
+        "*.meta": true,
+        "secret_file.txt": true,
+        "Build": true,
+        ".vscode": true,
+        "Library": true,
+        "*.gitignore": true,
+        "*.vsconfig": true,
+        "*.user": true,
+        "*.editorconfig": true,
+        "ProjectSettings": true,
+        "Temp": true,
+        "UserSettings": true,
+        "Logs": true,
+        "obj": true,
+        "Packages": true,
+        ".vs": true,
+        ".idea": true
+    },
+    "dotnet.defaultSolution": "UnityHades.sln",
+    "terminal.integrated.allowChords": true
 }
